ajustado plugins para rodar standalone